--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <title>About</title>
 </head>
 <body>
-    <img src="Cerydra-Short.png" alt="Cerydra-Short" width=250 height=400></img>
+    <img src="Cerydra-Short.png" alt="Cerydra-Short" width=250 height=400>
     <p>Alex Kempken is a 23 year old lover of video games.</p> 
     <p>He currently lives in Waterford, MI</p>
     <ul>
