--- a/index.html
+++ b/index.html
@@ -6,6 +6,40 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>Post 1: Tomorrow Comes</h1>
+    <h2>By: Alex Kempken Date: 6/23/2025</h2>
+    <img src="Clair-Obscur.jpeg" alt="Clair-Obscur" width="200" height="150">
+    <p>So today I just finished Clair Obscur, and overall I absolutely loved playing the game.</p>
+    <h1>Post 2: We Lost</h1>
+    <h2>By: Alex Kempken Date: 6/28/2025</h2>
+    <img src="BS-Fight.jpeg" alt="BS-Fight" width="150" height="250">
+    <p>So today I just finished Clair Obscur, and overall I absolutely loved playing the game.</p>
+    <table>
+        <tr>
+            <th>Attempt</th>
+            <th>Progress</th>
+            <th>Phase</th>
+        </tr>
+        <tr>
+            <th>1</th>
+            <th>34%</th>
+            <th>1</th>
+        </tr>
+        <tr>
+            <th>5</th>
+            <th>2%</th>
+            <th>2</th>
+        </tr>
+        <tr>
+            <th>40</th>
+            <th>75%</th>
+            <th>2</th>
+        </tr>
+    </table>
+    <form name="Email">
+        <label for="Email">Email: </label>
+        <input type="text" id="Email" name="Email">
+        <input type="submit" value="Submit">
+    </form>
 </body>
 </html>
