--- a/about.html
+++ b/about.html
@@ -6,6 +6,11 @@
     <title>About</title>
 </head>
 <body>
+    <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="contact.html">Contact</a></li>
+    </ul>
     <img src="Cerydra-Short.png" alt="Cerydra-Short" width=250 height=400>
     <p>Alex Kempken is a 23 year old lover of video games.</p> 
     <p>He currently lives in Waterford, MI</p>
