--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title>Document</title>
 </head>
 <body>
+    <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="contact.html">Contact</a></li>
+    </ul>
     <h1>Post 1: Tomorrow Comes</h1>
     <h2>By: Alex Kempken Date: 6/23/2025</h2>
     <img src="Clair-Obscur.jpeg" alt="Clair-Obscur" width="200" height="150">
