--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,29 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="contact.html">Contact</a></li>
+    </ul>
+    <form name="Contacts">
+        <label for="Name">Name: </label>
+        <input type="text" id="Name" name="Name">
+        <br>
+        <label for="Email">Email: </label>
+        <input type="text" id="Email" name="Email">
+        <br>
+        <label for="Reason">Reason: </label>
+        <select name="Words" id="Words">
+            <option value="Lumiere">saying hi</option>
+            <option value="Spring-Meadows">looking for a contracter</option>
+            <option value="Flying-Waters">interested in an interview</option>
+        </select>
+        <br>
+        <label for="Comment">Comments: </label>
+        <input type="text" id="Comment" name="Comment">
+        <br>
+        <input type="submit" value="Submit">
+    </form>
 </body>
 </html>
