--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
         <label for="Email">Email: </label>
         <input type="text" id="Email" name="Email">
         <br>
-        <label for="Reason">Reason: </label>
+        <label for="Words">Reason: </label>
         <select name="Words" id="Words">
             <option value="Lumiere">saying hi</option>
             <option value="Spring-Meadows">looking for a contracter</option>
