--- a/index.html
+++ b/index.html
@@ -14,11 +14,24 @@
     <h1>Post 1: Tomorrow Comes</h1>
     <h2>By: Alex Kempken Date: 6/23/2025</h2>
     <img src="Clair-Obscur.jpeg" alt="Clair-Obscur" width="200" height="150">
-    <p>So today I just finished Clair Obscur, and overall I absolutely loved playing the game.</p>
+    <p>So today I just finished Clair Obscur, and overall I absolutely loved playing the game. 
+        I really enjoyed the gameplay even though the parry mechanics were sometimes frame perfect timing,
+        but I'm sure there will be an update at some point to adjust that. The story itself was absolutely beautiful
+        with some parts moving me close to crying. The bosses also were some of my favorite. Of course I can't forget about
+        the music of the game. The music was so good thats its hard to imagine that this was Lorien Toustard's first
+        video game score. My favorite out of all them had to be "Une vie a t'aime" from the fight against Renoir.</p>
     <h1>Post 2: We Lost</h1>
     <h2>By: Alex Kempken Date: 6/28/2025</h2>
     <img src="BS-Fight.jpeg" alt="BS-Fight" width="150" height="250">
-    <p>So today I just finished Clair Obscur, and overall I absolutely loved playing the game.</p>
+    <p>Ok it's been three days since I finished the game and I'm still playing Clair Obscur. Why?
+        Because this optional boss fight is an ABSOLUTE NIGHTMARE. While finishing up the rest of the endgame content,
+        I ended up coming across a high level area in the ocean known as "Renoir's Drafts" which contained a lot of the final 
+        enemies from the endgame. That however wasn't the issue, it is the boss that appears at the very end of it all, Simon.
+        This boss is so ridiculously hard that I am still struggling three days late to actually finish it. Worse part
+        is that just when I think i finally beat him and his 24 million health pool, a cutscene reveal he has a phase 2, which
+        has triple the health, and his attack now have double the strikes I need to dodge and parry. If anyone has a suggestion,
+        do let me know because the table below really shows how many times I've tried this the last 3 days.
+    </p>
     <table>
         <tr>
             <th>Attempt</th>
