--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
         <li><a href="about.html">About</a></li>
         <li><a href="contact.html">Contact</a></li>
     </ul>
-    <form name="Contacts">
+    <form name="Contacts" netlify>
         <label for="Name">Name: </label>
         <input type="text" id="Name" name="Name">
         <br>
