--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <th>2</th>
         </tr>
     </table>
-    <form name="Email">
+    <form name="Email" netlify>
         <label for="Email">Email: </label>
         <input type="text" id="Email" name="Email">
         <input type="submit" value="Submit">
