--- a/contact.html
+++ b/contact.html
@@ -20,9 +20,9 @@
         <br>
         <label for="Words">Reason: </label>
         <select name="Words" id="Words">
-            <option value="Lumiere">saying hi</option>
-            <option value="Spring-Meadows">looking for a contracter</option>
-            <option value="Flying-Waters">interested in an interview</option>
+            <option value="saying-hi">saying hi</option>
+            <option value="looking-for-a-contracter">looking for a contracter</option>
+            <option value="interested-in-an-interview">interested in an interview</option>
         </select>
         <br>
         <label for="Comment">Comments: </label>
