Mistyped a last name

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         I really enjoyed the gameplay even though the parry mechanics were sometimes frame perfect timing,
         but I'm sure there will be an update at some point to adjust that. The story itself was absolutely beautiful
         with some parts moving me close to crying. The bosses also were some of my favorite. Of course I can't forget about
-        the music of the game. The music was so good thats its hard to imagine that this was Lorien Toustard's first
+        the music of the game. The music was so good thats its hard to imagine that this was Lorien Testard's first
         video game score. My favorite out of all them had to be "Une vie a t'aime" from the fight against Renoir.</p>
     <h1>Post 2: We Lost</h1>
     <h2>By: Alex Kempken Date: 6/28/2025</h2>
